--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- website by sczyh30 -->
+﻿<!-- website by sczyh30 -->
 <!-- M1racle Team - We are the first! -->
 <!DOCTYPE html>
 <html>
@@ -24,6 +24,7 @@
 	   <div id="m1-header">
 	   	<h2 class="text-center-sm">M1racle Team</h2>
 		<p class="lead text-center-sm text-success">欢迎来到M1racle Team~让我们一起创造奇迹!</p>
+			<center><img src="http://7xkkgd.com1.z0.glb.clouddn.com/m1racle-logo2.png" class="img-responsive pic-size-half" alt="logo"></center>
            <div class="text-center-sm">
                <div class="btn-group" id="btn-lg-group">
                    <button type="button" class="btn btn-success btn-lg">登录</button>
@@ -101,7 +102,7 @@
 	</div>
 	<!-- alert area end-->
 	<!-- panel tips area start-->
-	<div class="panel panel-primary" id="m1-tips">
+	<div class="panel panel-success" id="m1-tips">
 	   <div class="panel-heading">
 	      <h3 class="panel-title">Tips Everyday</h3>
 	   </div>
