--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 	   <!-- website header area start-->
 	   <div id="m1-header">
 	   	<h2 class="text-center-sm">M1racle Team</h2>
-		<p class="lead text-center-sm text-success">欢迎来到M1racle Team~让我们一起创造奇迹!</p>
+		<p class="lead text-center-sm text-success">欢迎来到M1racle Team~ 让我们一起创造奇迹!</p>
 			<center><img src="http://7xkkgd.com1.z0.glb.clouddn.com/m1racle-logo2.png" class="img-responsive pic-size-half" alt="logo"></center>
            <div class="text-center-sm">
                <div class="btn-group" id="btn-lg-group">
-                   <button type="button" class="btn btn-success btn-lg">登录</button>
+                   <button type="button" class="btn btn-success btn-lg" onclick="alert_will()">登录</button>
                    <button type="button" class="btn btn-warning btn-lg">注册</button>
                    <button type="button" class="btn btn-primary btn-lg" onclick="alert_will()">加入我们</button>
                </div>
@@ -88,6 +88,7 @@
 		            </ul>
 		         </li>
 		         <li><a href="#">Docker基地</a></li>
+		         <li><a href="#">Samsara数据仓库</a></li>
 		         <li><a onclick="alert_will()">关于我们</a></li>
 		      </ul>
 		   </div>
@@ -98,7 +99,7 @@
 	<div class="alert alert-info alert-dismissable" id="m1-alert">
 		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 		<h4>Information</h4>
-		<div><strong>网站正在建设中，敬请期待。完成时网站渲染模板可能会有所改变。</strong></div>
+		<div><strong>最近服务器不太正常，访问服务器会很慢。本页面为缓存页面，不连接至持久层。</strong></div>
 	</div>
 	<!-- alert area end-->
 	<!-- panel tips area start-->
