--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		            </ul>
 		         </li>
 		         <li><a href="#">Docker基地</a></li>
-		         <li><a href="#">Samsara数据仓库</a></li>
+		         <li><a href="/dm/repo">Samsara数据仓库</a></li>
 		         <li><a onclick="alert_will()">关于我们</a></li>
 		      </ul>
 		   </div>
