--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                        <li><a href="#">Web</a></li>
 		            </ul>
 		         </li>
-		         <li><a href="#">开源社区</a></li>
+		         <li><a href="/m1racle->osc">开源社区</a></li>
 		         <li class="dropdown">
 		            <a href="#" class="dropdown-toggle" data-toggle="dropdown"
 		            role="button" aria-expanded="false">
@@ -87,7 +87,7 @@
 		               <li><a href="#">代码查重</a></li>
 		            </ul>
 		         </li>
-		         <li><a href="#">Docker基地</a></li>
+		         <li><a href="/this->docker">Docker基地</a></li>
 		         <li><a href="/dm/repo">Samsara数据仓库</a></li>
 		         <li><a onclick="alert_will()">关于我们</a></li>
 		      </ul>
@@ -99,7 +99,7 @@
 	<div class="alert alert-info alert-dismissable" id="m1-alert">
 		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 		<h4>Information</h4>
-		<div><strong>最近服务器不太正常，访问服务器会很慢。本页面为缓存页面，不连接至持久层。</strong></div>
+		<div><strong>最近服务器不太正常，访问服务器会很慢。本页面为缓存页面，未连接至后端服务器。</strong></div>
 	</div>
 	<!-- alert area end-->
 	<!-- panel tips area start-->
